--- a/landing-page.css
+++ b/landing-page.css
@@ -13,7 +13,7 @@
     --clr-yellow:#FFFF00;
 }
 body{
-    background-image: url(360_F_287113142_8XLkz9kGNKWdvazBEgl8GoymDG5YBsa9\ \(1\).jpg);
+    background-image: url(background.jpg);
     background-size: cover;
 }
 h2{
