--- a/login.css
+++ b/login.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction:row;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     border-radius: 10px;
 }
 .left-container{
@@ -29,8 +29,8 @@
     padding: 5px;
     font-size: 3rem;
     font-weight: bold;
+    margin-top: 5%;
     padding-bottom: 7px;
-    margin-top: 10%;
 }
 h3,h4{
     display: flex;
@@ -53,19 +53,21 @@ input{
     border-radius: 40px;
     border: 1px black solid;
     display: flex;
+    align-self: center;
     justify-content: center;
-    margin-left: 60px;
     padding-left: 40px;
 }
 .username{
-    margin-top: 50px;
+    margin-top: 5%;
      margin-bottom: 20px;
 
 }
 .password{
     display: flex;
-    justify-content: flex-end;
     margin-right: 15%;
+    align-self: center;
+    justify-content: center;
+
 }
 
 .icons{
@@ -86,7 +88,7 @@ input{
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    margin-left: 60px;
+    align-self: center;
     padding-left: 0px;
     background-color: var(--clr-black);
     color: var(--clr-white);
@@ -95,7 +97,7 @@ input{
 .registration{
     display: flex;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 5%;
 }
 .line-text{
     display: flex;
@@ -111,13 +113,15 @@ input{
     margin: 15px 10px ;
 }
 .right-container{
+    display: felx;
+    margin: auto;
+    height: 100vh;
+    width: 48%;
+}
+img{
     display: flex;
     overflow: hidden;
-    height: 90%;
-    width: 48%;
-    background-image: url(login\ page\ pic.webp);
-    position: relative;
-    background-size: cover;
-    margin: auto;
+    height: 100%;
+    width: 100%;
     border-radius: 20px;
 }
